# DogeGuard

./: Cargo.toml  README.md
src/: accounts.rs  client.rs  json_parser.rs  main.rs  message.rs
src/api/: auth.rs  events.rs
src/www/: index.html
