[package]
name = "DogeGuard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
# tokio = { version = "1.33.0", features = ["full"] }
# actix-web = "4.4.0"
# chacha20poly1305 = "0.10.1"
